# WorkspacesEvents

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 1bffaa07b78a_add_user_model.py
app/: main.py
app/api/endpoints/: user.py
app/core/: config.py  db.py  init_db.py  user.py
app/crud/: base.py
backend/alembic/: env.py
backend/alembic/versions/: eda5f655851b_add_user_model.py
backend/app/: main.py
backend/app/api/: routers.py
backend/app/api/endpoints/: user.py
backend/app/core/: base.py  db.py  init_db.py  user.py
backend/app/crud/: base.py
backend/app/models/: user.py
frontend/: Dockerfile
frontend/src/: App.js  index.js
frontend/src/components/: Chat.js  Login.js  Notifications.js
infra/: compose.yml  nginx-dev.conf
