[tool.poetry]
name = "workspacesevents"
version = "0.1.0"
description = ""
authors = ["Bazulenkov <anton.bazulenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pydantic-settings = "^2.7.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
alembic = "^1.14.1"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
